<resources>
    <string name="app_name">BIMART</string>
    <string name="logo">logo</string>
    <string name="title">title</string>
    <string name="border_batik">Border Batik</string>
    <string name="bottom_navigation">Bottom Navigation</string>
    <string name="halo_langgir_nselamat_datang_di_bimart"><font color="black">Halo Langgir, \nSelamat Datang di</font> <font color="brown">BIMART!</font></string>
    <string name="program_pemberdayaan_berbasis_pals">PROGRAM PEMBERDAYAAN BERBASIS PALS</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="atau">atau</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="username">Username</string>
    <string name="lupa_password">*Lupa Password?</string>
    <string name="nama">Nama</string>
    <string name="masukkan_nama_lengkap">Masukkan Nama Lengkap</string>
    <string name="masukkan_username_baru">Masukkan Username Baru</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="email">Email</string>
    <string name="buat_password_baru">Buat Password Baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="masukkan_password_baru">Masukkan Password Baru</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="sumber">Sumber: warisanbudaya.kemdikbud.go.id</string>
    <string name="desc_sejarah">Batik Tulis Bakaran sudah ada sekitar abad ke 14 dan berhubungan dengan seorang penjaga benda-benda seni kerajaan Majapahit yang bernama Nyi Siti Sabirah (Nyi Danowati). Beliau datang ke desa Bakaran untuk mencari tempat persembunyian dari kejaran prajurit kerajaan Demak. Waktu itu kerajaan Majapahit yang diperintah Girindrawardana yang bergelar Brawijaya VI (1478-1498) berada dalam desakan Kerajaan Demak yang menganut Islam.
\n
\nNyi Danowati sebagai nenek moyang dan pengajar batik pertama di desa tersebut. Beliau mengajarkan ketrampilan membatik kepada masyarakat sekitar. Batik yang diajarkan memiliki corak batik Majapahit, seperti; gringsing, danliris, kawung, truntum, sida mukti, semen atau dikenal dengan sebutan gurdha, padhas gempal, dan lain-lain. Jika dilihat dari segi corak dan motif tersebut, Batik Bakaran memiliki kemiripan dengan batik Voornstenlanden (keraton), demikian pula warnanya yang cenderung hitam, putih, coklat, atau biru saja.
\n
\nCorak dan motif yang diajarkan tidak semua berasal dari Majapahit, ada yang khusus diciptakan Nyi Danowati sendiri di desa Bakaran. Motif gandrung salah satu corak yang konon terinspirasi dari pertemuan Nyi Danowati dengan Joko Pakuwon, kekasihnya, di tiras pandelikannya (wawancara Mbah Bukhari 25 September 2009).
\n
\nSelain batik corak gandrung ada empat corak asli ciptaan Nyi Danowati di Bakaran, yaitu: kopi pecah, kawung tunjung, manggaran, dan bregat ireng. Sedangkan menurut katalog dari Deperindag bahwa Batik Bakaran memiliki 18 corak batik tulis yang perlu dilestarikan, di antaranya adalah blebak kopik, blebak lung, blebak duri, blebak urang, kedhele kecer, merak ngigel, ungker cantel, sidarukun, limaran, magelati, rawan, dan puspabaskara (catalog Dinas Perindustrian,2009).</string>
    <string name="proses_batik">Ada beberapa proses, dan teknik dalam pembuatan batik bakaran, yakni mulai dari nggirah, nyimplong, ngering, nerusi, nembok, medel, nyolet, mbironi, nyogo, dan nglorod. Proses ini bertahap mulai tahap pertama sampai terakhir. Bila sudah selesai maka corak batik sudah bisa dinikmati. Tahapan-tahapan tersebut dikerjakan perajin secara manual tanpa ada alat-alat baru seperti cap, printing, sablon dsb.</string>
</resources>