<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <ImageView
                    android:id="@+id/title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/border_batik"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/list_borrder_1"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@drawable/logo"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/atau" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:src="@drawable/login"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/logo" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:text="@string/username"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginRight="30dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/masukkan_username"
                    android:textColor="@color/black"
                    android:textColorHint="#B6B6B6"
                    android:inputType="text"
                    android:padding="16dp"
                    android:background="@drawable/bg_btn_white"
                    android:autofillHints="" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginRight="30dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/masukkan_password"
                    android:textColor="@color/black"
                    android:textColorHint="#B6B6B6"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:background="@drawable/bg_btn_white"
                    android:autofillHints="" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:textStyle="bold"
                    android:textSize="11sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="7dp"
                    android:text="@string/lupa_password"/>
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="30dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:background="@drawable/bg_brown"
                    android:text="@string/submit"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/atau"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/atau" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/belum_punya_akun"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"/>
                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:background="@drawable/bg_btn_white"
                    android:textColor="@color/black"
                    android:text="@string/daftar"/>

                <ImageView
                    android:id="@+id/title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/border_batik"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="80dp"
                    android:src="@drawable/list_borrder_1"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>