<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Menu2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/border_batik"
                android:scaleType="fitCenter"
                android:src="@drawable/list_borrder_1"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/title">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/back"
                        android:layout_width="150dp"
                        android:layout_height="70dp"
                        android:layout_weight="0.5"
                        android:background="#000000FF"
                        android:padding="15dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:src="@drawable/back"/>

                    <ImageButton
                        android:id="@+id/title_header"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_weight="0.5"
                        android:background="#000000FF"
                        android:padding="-10dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:src="@drawable/u_class" />
                    <ImageButton
                        android:id="@+id/icon"
                        android:layout_width="150dp"
                        android:layout_height="70dp"
                        android:layout_weight="0.5"
                        android:background="#000000FF"
                        android:padding="-10dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:src="@drawable/small_u_class"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Proses Pembuatan Batik Tulis Bakaran"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_margin="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="center_vertical|end"
                        android:textSize="16sp"/>
                    <ImageButton
                        android:id="@+id/tag"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.5"
                        android:layout_marginRight="16dp"
                        android:background="#000000FF"
                        android:padding="-10dp"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:src="@drawable/tag"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/border_batik"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/video"
                    app:layout_constraintTop_toTopOf="parent" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_description"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/proses_batik"
                        android:textStyle="bold"
                        android:layout_margin="16dp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_vertical|end"
                        android:textSize="16sp"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/border_batik"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="80dp"
                    android:src="@drawable/video_lainnya"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/border_batik"
                    android:scaleType="fitCenter"
                    android:layout_marginBottom="80dp"
                    android:src="@drawable/list_borrder_1"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/nav_bottom_all"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/bottom_navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>